--- a/SCMF.cabal
+++ b/SCMF.cabal
@@ -18,4 +18,4 @@ cabal-version:       >=1.8
 executable SCMF
   main-is          : Main.hs
   -- other-modules:       
-  build-depends:       base ==4.6.*, containers ==0.5.*, pretty-tree ==0.1.*, split ==0.2.*, pretty ==1.1.*, time ==1.4.*, haskeline==0.7.*, regex-pcre-builtin==0.*, transformers==0.3.*, bytestring==0.10.*, attoparsec==0.10.*, aeson==0.7.*, text==0.11.*, filepath==1.3.*
+  build-depends:       base ==4.6.*, containers ==0.5.*, pretty-tree ==0.1.*, split ==0.2.*, pretty ==1.1.*, time ==1.4.*, haskeline==0.7.*, regex-pcre-builtin==0.*, transformers==0.3.*, bytestring==0.10.*, attoparsec==0.10.*, aeson==0.7.*, text==0.11.*, filepath==1.3.*, hashmap==1.3.*, unordered-containers=0.2.3.0
