--- a/SCMF.cabal
+++ b/SCMF.cabal
@@ -15,7 +15,42 @@ category:            Language
 build-type:          Simple
 cabal-version:       >=1.8
 
+Test-Suite test-scmf
+  type:               exitcode-stdio-1.0
+  main-is:            Main.hs
+  hs-source-dirs:     Test .
+  build-depends:      base == 4.* ,
+                      test-framework,
+                      test-framework-hunit,
+                      HUnit,
+                      containers == 0.5.*,
+                      bytestring,
+                      ghc,
+                      text,
+                      aeson,
+                      time,
+                      attoparsec,
+                      pretty-tree,
+                      unordered-containers
+
 executable SCMF
-  main-is          : Main.hs
+  main-is            : Main.hs
   -- other-modules:       
-  build-depends:       base ==4.6.*, containers ==0.5.*, pretty-tree ==0.1.*, split ==0.2.*, pretty ==1.1.*, time ==1.4.*, haskeline==0.7.*, regex-pcre-builtin==0.*, transformers==0.3.*, bytestring==0.10.*, attoparsec==0.10.*, aeson==0.7.*, text==0.11.*, filepath==1.3.*, hashmap==1.3.*, unordered-containers=0.2.3.0
+  build-depends:      base == 4.* ,
+                      containers == 0.5.*,
+                      bytestring,
+                      ghc,
+                      text,
+                      aeson,
+                      time,
+                      attoparsec,
+                      pretty-tree,
+                      unordered-containers,
+                      filepath,
+                      pretty,
+                      split,
+                      transformers,
+                      regex-posix,
+                      haskeline,
+                      regex-pcre
+
